// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExecutionStepInputOutputTab /> tests input snapshot test 1`] = `
<div>
  <div
    class="ioTab"
  >
    <div
      class="ioRow header"
    >
      <div>
        inputName
      </div>
      <div>
        inputValue
      </div>
    </div>
    <div
      class="panel"
      data-status="open"
    >
      <div
        class="panelTitle"
      >
        <span
          class="bp3-icon bp3-icon-chevron-up"
          icon="chevron-up"
        >
          <svg
            data-icon="chevron-up"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              chevron-up
            </desc>
            <path
              d="M12.71 9.29l-4-4C8.53 5.11 8.28 5 8 5s-.53.11-.71.29l-4 4a1.003 1.003 0 001.42 1.42L8 7.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span>
          Pipeline Infrastructure
        </span>
      </div>
      <div
        class="bp3-collapse"
        style="height: auto; overflow-y: visible; transition: none;"
      >
        <div
          aria-hidden="false"
          class="bp3-collapse-body"
          style="transform: translateY(0); transition: none;"
        >
          <div
            class="panel"
            data-status="open"
          >
            <div
              class="panelTitle"
            >
              <span
                class="bp3-icon bp3-icon-chevron-up"
                icon="chevron-up"
              >
                <svg
                  data-icon="chevron-up"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    chevron-up
                  </desc>
                  <path
                    d="M12.71 9.29l-4-4C8.53 5.11 8.28 5 8 5s-.53.11-.71.29l-4 4a1.003 1.003 0 001.42 1.42L8 7.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span>
                Infrastructure Definition
              </span>
            </div>
            <div
              class="bp3-collapse"
              style="height: auto; overflow-y: visible; transition: none;"
            >
              <div
                aria-hidden="false"
                class="bp3-collapse-body"
                style="transform: translateY(0); transition: none;"
              >
                <div
                  class="ioRow"
                >
                  <div
                    class="key"
                    data-fqn="basefqn.pipelineInfrastructure.type"
                  >
                    <div
                      class="main"
                    >
                      <div
                        class="text"
                      >
                        type
                      </div>
                    </div>
                  </div>
                  <div
                    class="value"
                  >
                    <div
                      class="main valueText"
                    >
                      <div
                        class="text"
                      >
                        <span
                          class="StyledProps--font StyledProps--main StyledProps--inline"
                        >
                          KubernetesDirect
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="panel"
                  data-status="open"
                >
                  <div
                    class="panelTitle"
                  >
                    <span
                      class="bp3-icon bp3-icon-chevron-up"
                      icon="chevron-up"
                    >
                      <svg
                        data-icon="chevron-up"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          chevron-up
                        </desc>
                        <path
                          d="M12.71 9.29l-4-4C8.53 5.11 8.28 5 8 5s-.53.11-.71.29l-4 4a1.003 1.003 0 001.42 1.42L8 7.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span>
                      Spec
                    </span>
                  </div>
                  <div
                    class="bp3-collapse"
                    style="height: auto; overflow-y: visible; transition: none;"
                  >
                    <div
                      aria-hidden="false"
                      class="bp3-collapse-body"
                      style="transform: translateY(0); transition: none;"
                    >
                      <div
                        class="ioRow"
                      >
                        <div
                          class="key"
                          data-fqn="basefqn.pipelineInfrastructure.spec.connectorRef"
                        >
                          <div
                            class="main"
                          >
                            <div
                              class="text"
                            >
                              connectorRef
                            </div>
                          </div>
                        </div>
                        <div
                          class="value"
                        >
                          <div
                            class="main valueText"
                          >
                            <div
                              class="text"
                            >
                              <span
                                class="StyledProps--font StyledProps--main StyledProps--inline"
                              >
                                account.KubernetesConnectorForAutomationTestasd
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ioRow"
                      >
                        <div
                          class="key"
                          data-fqn="basefqn.pipelineInfrastructure.spec.namespace"
                        >
                          <div
                            class="main"
                          >
                            <div
                              class="text"
                            >
                              namespace
                            </div>
                          </div>
                        </div>
                        <div
                          class="value"
                        >
                          <div
                            class="main valueText"
                          >
                            <div
                              class="text"
                            >
                              <span
                                class="StyledProps--font StyledProps--main StyledProps--inline"
                              >
                                ng-testing
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ioRow"
                      >
                        <div
                          class="key"
                          data-fqn="basefqn.pipelineInfrastructure.spec.releaseName"
                        >
                          <div
                            class="main"
                          >
                            <div
                              class="text"
                            >
                              releaseName
                            </div>
                          </div>
                        </div>
                        <div
                          class="value"
                        >
                          <div
                            class="main valueText"
                          >
                            <div
                              class="text"
                            >
                              <span
                                class="StyledProps--font StyledProps--main StyledProps--inline"
                              >
                                release-pipeline-1
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ioRow"
                      >
                        <div
                          class="key"
                          data-fqn="basefqn.pipelineInfrastructure.spec.releaseNumber"
                        >
                          <div
                            class="main"
                          >
                            <div
                              class="text"
                            >
                              releaseNumber
                            </div>
                          </div>
                        </div>
                        <div
                          class="value"
                        >
                          <div
                            class="main valueText"
                          >
                            <div
                              class="text"
                            >
                              <span
                                class="StyledProps--font StyledProps--main StyledProps--inline"
                              >
                                6
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ioRow"
                      >
                        <div
                          class="key"
                          data-fqn="basefqn.pipelineInfrastructure.spec.foo"
                        >
                          <div
                            class="main"
                          >
                            <div
                              class="text"
                            >
                              foo
                            </div>
                          </div>
                        </div>
                        <div
                          class="value"
                        >
                          <div
                            class="main valueText"
                          >
                            <div
                              class="text"
                            >
                              <span
                                class="StyledProps--font StyledProps--main StyledProps--inline"
                              >
                                true
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="panel"
            data-status="open"
          >
            <div
              class="panelTitle"
            >
              <span
                class="bp3-icon bp3-icon-chevron-up"
                icon="chevron-up"
              >
                <svg
                  data-icon="chevron-up"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    chevron-up
                  </desc>
                  <path
                    d="M12.71 9.29l-4-4C8.53 5.11 8.28 5 8 5s-.53.11-.71.29l-4 4a1.003 1.003 0 001.42 1.42L8 7.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span>
                Environment
              </span>
            </div>
            <div
              class="bp3-collapse"
              style="height: auto; overflow-y: visible; transition: none;"
            >
              <div
                aria-hidden="false"
                class="bp3-collapse-body"
                style="transform: translateY(0); transition: none;"
              >
                <div
                  class="ioRow"
                >
                  <div
                    class="key"
                    data-fqn="basefqn.pipelineInfrastructure.environment.name"
                  >
                    <div
                      class="main"
                    >
                      <div
                        class="text"
                      >
                        name
                      </div>
                    </div>
                  </div>
                  <div
                    class="value"
                  >
                    <div
                      class="main valueText"
                    >
                      <div
                        class="text"
                      >
                        <span
                          class="StyledProps--font StyledProps--main StyledProps--inline"
                        >
                          env1
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ioRow"
                >
                  <div
                    class="key"
                    data-fqn="basefqn.pipelineInfrastructure.environment.identifier"
                  >
                    <div
                      class="main"
                    >
                      <div
                        class="text"
                      >
                        identifier
                      </div>
                    </div>
                  </div>
                  <div
                    class="value"
                  >
                    <div
                      class="main valueText"
                    >
                      <div
                        class="text"
                      >
                        <span
                          class="StyledProps--font StyledProps--main StyledProps--inline"
                        >
                          env
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ioRow"
                >
                  <div
                    class="key"
                    data-fqn="basefqn.pipelineInfrastructure.environment.type"
                  >
                    <div
                      class="main"
                    >
                      <div
                        class="text"
                      >
                        type
                      </div>
                    </div>
                  </div>
                  <div
                    class="value"
                  >
                    <div
                      class="main valueText"
                    >
                      <div
                        class="text"
                      >
                        <span
                          class="StyledProps--font StyledProps--main StyledProps--inline"
                        >
                          Production
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ExecutionStepInputOutputTab /> tests output snapshot test 1`] = `
<div>
  <div
    class="ioTab"
  >
    <div
      class="ioRow header"
    >
      <div>
        outputName
      </div>
      <div>
        outputValue
      </div>
    </div>
    <div
      class="panel"
      data-status="open"
    >
      <div
        class="panelTitle"
      >
        <span
          class="bp3-icon bp3-icon-chevron-up"
          icon="chevron-up"
        >
          <svg
            data-icon="chevron-up"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              chevron-up
            </desc>
            <path
              d="M12.71 9.29l-4-4C8.53 5.11 8.28 5 8 5s-.53.11-.71.29l-4 4a1.003 1.003 0 001.42 1.42L8 7.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span>
          Output
        </span>
      </div>
      <div
        class="bp3-collapse"
        style="height: auto; overflow-y: visible; transition: none;"
      >
        <div
          aria-hidden="false"
          class="bp3-collapse-body"
          style="transform: translateY(0); transition: none;"
        >
          <div
            class="ioRow"
          >
            <div
              class="key"
              data-fqn="basefqn.output.type"
            >
              <div
                class="main"
              >
                <div
                  class="text"
                >
                  type
                </div>
              </div>
            </div>
            <div
              class="value"
            >
              <div
                class="main valueText"
              >
                <div
                  class="text"
                >
                  <span
                    class="StyledProps--font StyledProps--main StyledProps--inline"
                  >
                    environmentOutcome
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ioRow"
          >
            <div
              class="key"
              data-fqn="basefqn.output.name"
            >
              <div
                class="main"
              >
                <div
                  class="text"
                >
                  name
                </div>
              </div>
            </div>
            <div
              class="value"
            >
              <div
                class="main valueText"
              >
                <div
                  class="text"
                >
                  <span
                    class="StyledProps--font StyledProps--main StyledProps--inline"
                  >
                    env1
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ioRow"
          >
            <div
              class="key"
              data-fqn="basefqn.output.identifier"
            >
              <div
                class="main"
              >
                <div
                  class="text"
                >
                  identifier
                </div>
              </div>
            </div>
            <div
              class="value"
            >
              <div
                class="main valueText"
              >
                <div
                  class="text"
                >
                  <span
                    class="StyledProps--font StyledProps--main StyledProps--inline"
                  >
                    env
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ioRow"
          >
            <div
              class="key"
              data-fqn="basefqn.output.environmentType"
            >
              <div
                class="main"
              >
                <div
                  class="text"
                >
                  environmentType
                </div>
              </div>
            </div>
            <div
              class="value"
            >
              <div
                class="main valueText"
              >
                <div
                  class="text"
                >
                  <span
                    class="StyledProps--font StyledProps--main StyledProps--inline"
                  >
                    Production
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="panel"
      data-status="open"
    >
      <div
        class="panelTitle"
      >
        <span
          class="bp3-icon bp3-icon-chevron-up"
          icon="chevron-up"
        >
          <svg
            data-icon="chevron-up"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              chevron-up
            </desc>
            <path
              d="M12.71 9.29l-4-4C8.53 5.11 8.28 5 8 5s-.53.11-.71.29l-4 4a1.003 1.003 0 001.42 1.42L8 7.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span>
          Someotherkey
        </span>
      </div>
      <div
        class="bp3-collapse"
        style="height: auto; overflow-y: visible; transition: none;"
      >
        <div
          aria-hidden="false"
          class="bp3-collapse-body"
          style="transform: translateY(0); transition: none;"
        >
          <div
            class="ioRow"
          >
            <div
              class="key"
              data-fqn="basefqn.someotherkey.type"
            >
              <div
                class="main"
              >
                <div
                  class="text"
                >
                  type
                </div>
              </div>
            </div>
            <div
              class="value"
            >
              <div
                class="main valueText"
              >
                <div
                  class="text"
                >
                  <span
                    class="StyledProps--font StyledProps--main StyledProps--inline"
                  >
                    KubernetesDirect
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ioRow"
          >
            <div
              class="key"
              data-fqn="basefqn.someotherkey.connectorRef"
            >
              <div
                class="main"
              >
                <div
                  class="text"
                >
                  connectorRef
                </div>
              </div>
            </div>
            <div
              class="value"
            >
              <div
                class="main valueText"
              >
                <div
                  class="text"
                >
                  <span
                    class="StyledProps--font StyledProps--main StyledProps--inline"
                  >
                    account.KubernetesConnectorForAutomationTestasd
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ioRow"
          >
            <div
              class="key"
              data-fqn="basefqn.someotherkey.namespace"
            >
              <div
                class="main"
              >
                <div
                  class="text"
                >
                  namespace
                </div>
              </div>
            </div>
            <div
              class="value"
            >
              <div
                class="main valueText"
              >
                <div
                  class="text"
                >
                  <span
                    class="StyledProps--font StyledProps--main StyledProps--inline"
                  >
                    ng-testing
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ioRow"
          >
            <div
              class="key"
              data-fqn="basefqn.someotherkey.releaseName"
            >
              <div
                class="main"
              >
                <div
                  class="text"
                >
                  releaseName
                </div>
              </div>
            </div>
            <div
              class="value"
            >
              <div
                class="main valueText"
              >
                <div
                  class="text"
                >
                  <span
                    class="StyledProps--font StyledProps--main StyledProps--inline"
                  >
                    release-pipeline-1
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ioRow"
          >
            <div
              class="key"
              data-fqn="basefqn.someotherkey.kind"
            >
              <div
                class="main"
              >
                <div
                  class="text"
                >
                  kind
                </div>
              </div>
            </div>
            <div
              class="value"
            >
              <div
                class="main valueText"
              >
                <div
                  class="text"
                >
                  <span
                    class="StyledProps--font StyledProps--main StyledProps--inline"
                  >
                    KubernetesDirect
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ioRow"
          >
            <div
              class="key"
            >
              <div
                class="main"
              >
                <div
                  class="text"
                >
                  path
                </div>
              </div>
            </div>
            <div
              class="value"
            >
              <div
                class="main"
              >
                <div
                  class="text"
                >
                  path1, path2
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ExecutionStepInputOutputTab /> tests output snapshot with no data 1`] = `
<div>
  <div
    class="ioTab"
    data-empty="true"
  >
    pipeline.execution.iotab.noOutputText
  </div>
</div>
`;
